--- a/style.css
+++ b/style.css
@@ -11,3 +11,12 @@ body{
 #transaction-area{
     display: none; /* Transaction area wont be shown on login page */
 }
+.deposit{
+    background-color: rgb(0, 128, 49);
+}
+.withdraw{
+    background-color: rgb(202, 7, 7);
+}
+.balance{
+    background-color: rgb(12, 78, 219);
+}
